--- a/popup/index.html
+++ b/popup/index.html
@@ -1,2 +1,5 @@
+<script type="module" crossorigin src="./assets/index.9c8b9666.js"></script>
+<link rel="modulepreload" href="./assets/vendor.f195de38.js">
+<link rel="stylesheet" href="./assets/index.125936d1.css">
 <div id="root"></div>
-<script type="module" src="./src/main.jsx"></script>
+
